[gd_scene load_steps=2 format=3 uid="uid://r1jbo1scjxxp"]

[ext_resource type="Script" path="res://addons/dialouging/scenes/dialouge_editor.gd" id="1_3jvfa"]

[node name="DialougeEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3jvfa")

[node name="GraphEdit" type="GraphEdit" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
snapping_enabled = false
right_disconnects = true

[node name="Start" type="GraphNode" parent="GraphEdit"]
layout_mode = 0
offset_left = 100.0
offset_top = 100.0
offset_right = 174.0
offset_bottom = 178.0
mouse_filter = 1
position_offset = Vector2(100, 100)
title = "Start"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true

[node name="Label" type="Label" parent="GraphEdit/Start"]
layout_mode = 2
text = "Start"

[node name="End" type="GraphNode" parent="GraphEdit"]
layout_mode = 0
offset_left = 300.0
offset_top = 100.0
offset_right = 366.0
offset_bottom = 178.0
mouse_filter = 1
position_offset = Vector2(300, 100)
title = "End"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true

[node name="Label" type="Label" parent="GraphEdit/End"]
layout_mode = 2
text = "End"

[node name="Add" type="MenuButton" parent="."]
visible = false
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Add"
item_count = 2
popup/item_0/text = "Speech"
popup/item_0/id = 0
popup/item_1/text = "Choice"
popup/item_1/id = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="connection_request" from="GraphEdit" to="." method="_on_graph_edit_connection_request"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_graph_edit_disconnection_request"]
